move chemdoodle to cdn

--- a/experiment/simulation/index.html
+++ b/experiment/simulation/index.html
@@ -5,11 +5,6 @@
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
     <link
       rel="stylesheet"
-      href="chemdoodleWeb-9.2.0/ChemDoodleWeb.css"
-      type="text/css"
-    />
-    <link
-      rel="stylesheet"
       href="https://cdn.jsdelivr.net/gh/virtual-labs/virtual-style@0.0.7-b/css/style.css"
     />
     <link rel="stylesheet" href="./css/main.css" />
@@ -72,7 +67,7 @@
     <!-- Add JS at the bottom of HTML file -->
     <script
       type="text/javascript"
-      src="chemdoodleWeb-9.2.0/ChemDoodleWeb.js"
+      src="https://cdn.jsdelivr.net/gh/b30wulffz/chemdoodleWeb@9.2.0/ChemDoodleWeb.js"
     ></script>
     <script src="https://cdnjs.cloudflare.com/ajax/libs/Chart.js/2.9.4/Chart.js"></script>
     <script type="module" src="./js/main.js"></script>
