Add intrinsic reaction simulation (#2)
* Add simulation

* use strict mode, fix const, ===, !==

* Add aim, pretest, posttest, experiment name, theory, procedure

* Add more coordinates in simulation data

* Add difficulty levels in quizzes, remove references

* Fix grammar issues

* move chemdoodle to cdn

--- a/experiment/simulation/index.html
+++ b/experiment/simulation/index.html
@@ -1,13 +1,75 @@
 <!DOCTYPE html>
 <html>
-<head>
-	<!-- Add CSS at the head of HTML file -->
-    <link rel="stylesheet" href="./css/main.css">
-</head>
-<body>
-		<!-- Your code goes here-->
+  <head>
+    <!-- Add CSS at the head of HTML file -->
+    <meta name="viewport" content="width=device-width, initial-scale=1.0" />
+    <link
+      rel="stylesheet"
+      href="https://cdn.jsdelivr.net/gh/virtual-labs/virtual-style@0.0.7-b/css/style.css"
+    />
+    <link rel="stylesheet" href="./css/main.css" />
+  </head>
+  <body>
+    <!-- Your code goes here-->
+    <div class="v-details-container v-margin-bottom">
+      <div class="v-detail-title">Instructions</div>
+      <div class="v-detail-row left-on-mobile">
+        In the following graph, 0 represents transition state.
+      </div>
+      <div class="v-detail-row left-on-mobile">
+        0 to 11 represents transition from transition state to products.
+      </div>
+      <div class="v-detail-row left-on-mobile">
+        0 to -5 represents transition from transition state to reactants
+      </div>
+      <div class="v-detail-row left-on-mobile">
+        Click on the left arrow to move from transition state to reactants.
+      </div>
+      <div class="v-detail-row left-on-mobile">
+        Click on the right arrow to move from transition state to products.
+      </div>
+      <div class="v-detail-row left-on-mobile">
+        Perform this process repeatedly until endpoint is reached.
+      </div>
+      <div class="v-detail-row left-on-mobile">
+        Observe how Carbon moves towards Chlorine or Bromine depending on the
+        transition direction.
+      </div>
+      <div class="v-detail-row left-on-mobile">
+        Also observe the change in energy while moving towards reactants, or
+        products.
+      </div>
+    </div>
+    <div class="columns">
+      <div class="column center-content v-flex-column">
+        <canvas
+          id="element"
+          style="width: 100%; max-width: 700px; height: 100%"
+        ></canvas>
+      </div>
+      <div class="column center-content v-vertical">
+        <canvas id="myChart" style="width: 100%; max-width: 700px"></canvas>
+        <div class="columns is-mobile" style="width: 100%">
+          <div class="column">
+            <div class="v-button" id="left">
+              <img src="./images/arrow.png" class="arrow arrow-left" />
+            </div>
+          </div>
+          <div class="column">
+            <div class="v-button" id="right">
+              <img src="./images/arrow.png" class="arrow" />
+            </div>
+          </div>
+        </div>
+      </div>
+    </div>
 
-	<!-- Add JS at the bottom of HTML file --> 
-        <script src="./js/main.js"></script>
-</body>
+    <!-- Add JS at the bottom of HTML file -->
+    <script
+      type="text/javascript"
+      src="https://cdn.jsdelivr.net/gh/b30wulffz/chemdoodleWeb@9.2.0/ChemDoodleWeb.js"
+    ></script>
+    <script src="https://cdnjs.cloudflare.com/ajax/libs/Chart.js/2.9.4/Chart.js"></script>
+    <script type="module" src="./js/main.js"></script>
+  </body>
 </html>
