--- a/experiment/simulation/index.html
+++ b/experiment/simulation/index.html
@@ -11,35 +11,11 @@
   </head>
   <body>
     <!-- Your code goes here-->
-    <div class="v-details-container v-margin-bottom">
+    <div class="v-details-container v-margin-bottom v-floating-details">
       <div class="v-detail-title">Instructions</div>
-      <div class="v-detail-row left-on-mobile">
-        In the following graph, 0 represents transition state.
-      </div>
-      <div class="v-detail-row left-on-mobile">
-        0 to 11 represents transition from transition state to products.
-      </div>
-      <div class="v-detail-row left-on-mobile">
-        0 to -5 represents transition from transition state to reactants
-      </div>
-      <div class="v-detail-row left-on-mobile">
-        Click on the left arrow to move from transition state to reactants.
-      </div>
-      <div class="v-detail-row left-on-mobile">
-        Click on the right arrow to move from transition state to products.
-      </div>
-      <div class="v-detail-row left-on-mobile">
-        Perform this process repeatedly until endpoint is reached.
-      </div>
-      <div class="v-detail-row left-on-mobile">
-        Observe how Carbon moves towards Chlorine or Bromine depending on the
-        transition direction.
-      </div>
-      <div class="v-detail-row left-on-mobile">
-        Also observe the change in energy while moving towards reactants, or
-        products.
-      </div>
+      <div class="v-detail-row left-on-mobile" id="instructions"></div>
     </div>
+
     <div class="columns">
       <div class="column center-content v-flex-column">
         <canvas
